appId: com.curso.shopdemo
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "input-email"
    timeout: 60000
- tapOn: "E-mail"
- inputText: "cliente@shopdemo.com"
- tapOn: "Senha"
- inputText: "123456"
- hideKeyboard
- tapOn: "btn-entrar"
- extendedWaitUntil:
    visible: "tela-catalogo"
    timeout: 40000

- assertVisible:
    id: "tela-catalogo"