appId: com.curso.shopdemo
env:
 EMAIL: ${EMAIL || "cliente@shopdemo.com"}
 SENHA: ${SENHA || "123456"}
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible:
      id: "input-email"
    timeout: 60000
- tapOn: "E-mail"
- inputText: ${EMAIL}
- tapOn: "Senha"
- inputText: ${SENHA}
- hideKeyboard
- tapOn:
    id: "btn-entrar"
- extendedWaitUntil:
    visible: "tela-catalogo"
    timeout: 40000

- assertVisible:
    id: "tela-catalogo"